:sparkles: Add jvm and game arguments options